--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://kit.fontawesome.com/f73da28bd5.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-  <link rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css"
-    integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous">
+  
 
   <title>To Do List</title>
 </head>
@@ -22,7 +21,7 @@
             <span class="card-title">Task-List</span>
             <div class="row">
               <form id="task-form">
-                <div class="input-field col s12">
+                <div class="input-field col s12 ">
                   <input type="text" name="task" id="task">
                   <label for="task">New Task</label>
                 </div>
